@@ -15,6 +15,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Added support for compound spellcasting animations
+    server/spell_util.c
+    common/object.c
+Yann Chachkoff (gros) 2007-11-18
+
 Added support for compound attack animations (displaying a custom animation
 sequence when attacking with a weapon)
     server/attack.c
